--- a/package.json
+++ b/package.json
@@ -18,13 +18,13 @@
   "author": "David Gil de Gómez Pérez (Studiosi)",
   "license": "MIT",
   "devDependencies": {
+    "almost-equal": "^1.1.0",
     "gulp": "^4.0.2",
+    "gulp-concat": "^2.6.1",
     "gulp-html-minifier-terser": "^6.0.1",
     "gulp-jsdoc3": "^3.0.0",
-    "gulp-minify": "^3.1.0"
-  },
-  "dependencies": {
-    "almost-equal": "^1.1.0",
-    "mocha": "^8.1.3"
+    "gulp-minify": "^3.1.0",
+    "mocha": "^8.1.3",
+    "rewire": "^5.0.0"
   }
 }
